--- a/full-stack.html
+++ b/full-stack.html
@@ -46,7 +46,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://nezasa.join.com/jobs/267120-full-stack-software-engineer'>Job @ Nezasa (Lisbon): Full-Stack Software Engineer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nezasa.join.com/jobs/267120-full-stack-software-engineer'>Job @ Nezasa (Lisbon): Full-Stack Software Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -78,7 +78,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://innogy.join.com/jobs/251568-full-stack-engineer-m-f-d-for-calipsa'>Job @ innogy Innovation Hub (London): Full Stack E... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://innogy.join.com/jobs/251568-full-stack-engineer-m-f-d-for-calipsa'>Job @ innogy Innovation Hub (London): Full Stack E... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -156,7 +156,7 @@ Rochester School is a private school focused on environmental sustainability and
 Specifically, we're looking for experienced developers to work on VERY 
 interesting?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/nicesystems/job/ofMsafwn'>NICE Careers - Senior Full Stack Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nicesystems/job/ofMsafwn'>NICE Careers - Senior Full Stack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... Senior Full Stack Developer. R&D / Engineering Raanana, Israel Job Number: 
 8347. Apply. Position at NICE. Responsibilities: Design and develop quality,?...</p>
@@ -225,7 +225,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Swipii/743999690430567-full-stack-software-developer-40k-to-55k-pa'>Swipii Full Stack Software Developer - ?40k to ?55k pa | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Swipii/743999690430567-full-stack-software-developer-40k-to-55k-pa'>Swipii Full Stack Software Developer - ?40k to ?55k pa | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -428,7 +428,7 @@ This position reports to: Manager, Application Development. ServiceNow is?...</p
 <p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/reddit/jobs/1786777'>Job Application for Senior Full-Stack Engineer, Revenue &amp; Traffic at Reddit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/reddit/jobs/1786777'>Job Application for Senior Full-Stack Engineer, Revenue &amp; Traffic at Reddit</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
